--- a/style.css
+++ b/style.css
@@ -105,7 +105,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    box-sizing: border-box; /* Ensures padding doesn't overflow */
+    box-sizing: border-box;
+    /* Ensures padding doesn't overflow */
     padding: 1rem 10vw;
     background: linear-gradient(15deg, rgba(149, 0, 255, 0.25) 5%, rgba(255, 0, 0, 0.25) 95%);
     font-weight: bold;
@@ -245,15 +246,15 @@ footer li {
     background-position: center;
     background-repeat: no-repeat;
 
-    mask-image: 
+    mask-image:
         linear-gradient(to bottom, black 50%, transparent 100%),
         linear-gradient(to right, transparent 0%, black 20%, black 80%, transparent 100%);
-    -webkit-mask-image: 
+    -webkit-mask-image:
         linear-gradient(to bottom, black 50%, transparent 100%),
         linear-gradient(to right, transparent 0%, black 20%, black 80%, transparent 100%);
     mask-composite: intersect;
     -webkit-mask-composite: destination-in;
-    
+
     pointer-events: none;
 }
 
@@ -318,6 +319,7 @@ footer li {
     flex-wrap: wrap;
     gap: 25px;
     justify-content: center;
+    list-style: none;
 }
 
 .card {
@@ -346,6 +348,26 @@ footer li {
             transparent 0px),
         var(--socials-shadow);
 }
+
+.card a {
+    display: flex;
+    flex-direction: column;
+    /* stack icon + label */
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.creator-name {
+    text-align: center;
+    font-weight: 500;
+    opacity: 0.9;
+}
+
 
 .main {
     margin: 2rem 5rem;
@@ -433,7 +455,7 @@ h1 {
     }
 
     .social-container {
-        margin: 1rem;
+        margin: 1rem 1.5rem;
         padding: 1.5rem 1rem;
     }
 
@@ -449,13 +471,13 @@ h1 {
 
     .main {
         padding: 2rem 1rem 2rem 1rem;
-        margin: 1rem 0rem 0rem 0rem;
+        margin: 1rem 1rem 0rem 1rem;
         text-align: left;
     }
 
     .discord {
         padding: 1rem 1rem 2rem 1rem;
-        margin: 1rem 0rem 0rem 0rem;
+        margin: 1rem 1rem 0rem 1rem;
         text-align: left;
     }
 
@@ -488,8 +510,8 @@ h1 {
     }
 
     .social-page-icons img {
-        height: 35px;
-        width: 35px;
+        height: 40px;
+        width: 40px;
         border-radius: 2px;
         filter: drop-shadow(4px 4px 3px rgba(0, 0, 0, 0.756));
     }
@@ -505,10 +527,6 @@ h1 {
     .discordinvite {
         font-size: 15px;
         padding: 0.5rem;
-    }
-
-    .discord {
-        text-align: left;
     }
 
     h3 {
@@ -529,10 +547,9 @@ h1 {
         background-attachment: fixed;
         background-color: var(--socials-color);
         border-radius: 20%;
-        padding: 15px;
+        padding: 25px;
         height: 50px;
         width: 50px;
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     }
-
 }
