--- a/style.css
+++ b/style.css
@@ -432,17 +432,8 @@ footer li {
 }
 
 .privacy-policy {
-    margin: 2rem;
     width: 100%;
     flex: 1;
-    padding-top: 10vh;
-}
-
-.terms-of-service {
-    margin: 2rem;
-    width: 100%;
-    flex: 1;
-    padding-top: 10vh;
 }
 
 
@@ -511,15 +502,6 @@ h1 {
         padding: 0rem;
     }
 
-    .privacy-policy {
-        text-align: left;
-        padding-top: 20.5vh;
-    }
-
-    .terms-of-service {
-        text-align: left;
-    }
-
     .social-page-icons {
         display: flex;
         flex-wrap: wrap;
@@ -545,6 +527,11 @@ h1 {
     }
 
     .discordinvite {
+        font-size: 15px;
+        padding: 0.5rem;
+    }
+
+    .invite {
         font-size: 15px;
         padding: 0.5rem;
     }
