--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header {
     box-shadow: 0 0 25px black;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
 }
 
