--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ footer li {
     background: transparent;
     border: transparent;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .nav a:hover {
