--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ footer li {
   border-radius: 25px;
 }
 
+/* Authentication */
 #auth-container {
   margin-left: auto;
   display: flex;
@@ -327,12 +328,6 @@ footer li {
   color: var(--nav-color);
 }
 
-#auth-container {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
 .header-pfp {
   width: 32px;
   height: 32px;
@@ -343,30 +338,16 @@ footer li {
   color: var(--nav-color);
 }
 
-
-.ip {
-  color: #007bff;
-}
-
-.item-list {
-  text-align: center;
-  list-style: none;
-  padding: 2rem 0.5rem 2rem 0.5rem;
-}
-
-.icon-group img {
-  height: 150px;
-  width: 150px;
-  border-radius: 15px;
-  filter: drop-shadow(8px 8px 10px rgba(0, 0, 0, 0.756));
-}
-
-.icon-group {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 25px;
-  justify-content: center;
-  list-style: none;
+/* Components */
+.admin-card, .user-card {
+  margin: 2rem 5rem;
+  width: 100%;
+  flex: 1;
+  padding: 2rem;
+  border-radius: 50px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  background-color: var(--footer-color);
+  border: 2px solid var(--border-color);
 }
 
 .card {
@@ -385,17 +366,6 @@ footer li {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
-.card:hover {
-  /* transform: scale(1.3); */
-  box-shadow: 0 0 20px 10px var(--item-shadow);
-  background-color: var(--item-color);
-  position: relative;
-  background: radial-gradient(circle at var(--x) var(--y),
-      var(--item-shadow),
-      transparent 0px),
-    var(--item-shadow);
-}
-
 .card a {
   display: flex;
   flex-direction: column;
@@ -409,33 +379,21 @@ footer li {
   color: var(--text-color);
 }
 
+.card:hover {
+  /* transform: scale(1.3); */
+  box-shadow: 0 0 20px 10px var(--item-shadow);
+  background-color: var(--item-color);
+  position: relative;
+  background: radial-gradient(circle at var(--x) var(--y),
+      var(--item-shadow),
+      transparent 0px),
+    var(--item-shadow);
+}
+
 .creator-name {
   text-align: center;
   font-weight: 500;
   opacity: 0.9;
-}
-
-
-.main {
-  margin: 2rem 5rem;
-  width: 100%;
-  flex: 1;
-  padding: 2rem;
-  border-radius: 50px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
-  background-color: var(--footer-color);
-  border: 2px solid var(--border-color);
-}
-
-.secondary {
-  margin: 2rem 5rem;
-  width: 100%;
-  flex: 1;
-  padding: 2rem;
-  border-radius: 50px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
-  background-color: var(--footer-color);
-  border: 2px solid var(--border-color);
 }
 
 .discordinvite {
@@ -450,21 +408,25 @@ footer li {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
-.admin-card, .user-card {
-  margin: 2rem 5rem;
-  width: 100%;
-  flex: 1;
-  padding: 2rem;
-  border-radius: 50px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
-  background-color: var(--footer-color);
-  border: 2px solid var(--border-color);
-}
-
 .discordinvite:hover {
   text-decoration: none;
   color: #ededed;
   box-shadow: 0 0 20px 5px var(--item-shadow);
+}
+
+.icon-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  justify-content: center;
+  list-style: none;
+}
+
+.icon-group img {
+  height: 150px;
+  width: 150px;
+  border-radius: 15px;
+  filter: drop-shadow(8px 8px 10px rgba(0, 0, 0, 0.756));
 }
 
 .invite {
@@ -486,21 +448,44 @@ footer li {
   box-shadow: 0 0 20px 5px var(--item-shadow);
 }
 
+.item-list {
+  text-align: center;
+  list-style: none;
+  padding: 2rem 0.5rem 2rem 0.5rem;
+}
+
+.main {
+  margin: 2rem 5rem;
+  width: 100%;
+  flex: 1;
+  padding: 2rem;
+  border-radius: 50px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  background-color: var(--footer-color);
+  border: 2px solid var(--border-color);
+}
+
 .privacy-policy {
   width: 100%;
   flex: 1;
 }
 
+.secondary {
+  margin: 2rem 5rem;
+  width: 100%;
+  flex: 1;
+  padding: 2rem;
+  border-radius: 50px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  background-color: var(--footer-color);
+  border: 2px solid var(--border-color);
+}
 
 h1 {
   background: linear-gradient(90deg, rgba(149, 0, 255, 1) 0%, rgba(255, 0, 0, 1) 50%);
   background-clip: text;
   color: transparent;
   font-size: var(--font-size-xxlarge);
-}
-
-.server-ip {
-  color: #007bff;
 }
 
 @media (max-width: 800px) {
@@ -601,10 +586,6 @@ h1 {
   h3 {
     text-align: center;
     font-size: 1.2rem;
-  }
-
-  .schedule img {
-    width: 70vw;
   }
 
   .card {
