--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ footer li {
   display: inline;
 }
 
-.container {
+.main-container {
   color: var(--text-color);
   padding: 10.5rem 5rem 0rem 5rem;
   display: flex;
@@ -500,7 +500,7 @@ h1 {
     text-align: center;
   }
 
-  .container {
+  .main-container {
     text-align: center;
     padding: 7.5rem 1rem 0 1rem;
   }
