--- a/style.css
+++ b/style.css
@@ -466,6 +466,20 @@ footer li {
   box-shadow: 0 0 20px 5px var(--item-shadow);
 }
 
+dialog {
+  border: 2px solid var(--item-shadow);
+  background-color: var(--item-color);
+  color: var(--text-color);
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0 0 10px 1px var(--item-shadow);
+  font-family: inherit;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.3);
+}
+
 .item-list {
   text-align: center;
   list-style: none;
